# Talktor-BE

./: .env.example  .gitignore  pyproject.toml
api/: urls.py
api/cheatsheet/: apps.py
api/project/: admin.py  exceptions.py  urls.py
api/project/migrations/: 0001_initial.py  0002_quiz_quizquestions_quizanswerhistory.py
api/project/models/: __init__.py  material.py  project.py
api/project/serializers/: __init__.py  project_serializers.py  quiz_serializers.py
api/project/services/: __init__.py  project_service.py  quiz_service.py
api/project/views/: __init__.py  project_view.py  quiz_view.py
api/quiz/: exceptions.py  urls.py
api/quiz/models/: __init__.py  quiz.py
api/quiz/serializers/: quiz_serializers.py
api/quiz/services/: quiz_service.py
api/quiz/views/: quiz_view.py
api/user/: exceptions.py  urls.py
api/user/migrations/: 0001_initial.py
api/user/models/: user.py
api/user/serializers/: user_serializers.py
api/user/services/: auth_service.py
api/user/views/: auth_view.py
common/authentication/: custom_jwt_authentication.py  exceptions.py
common/exceptions/: custom_exceptions.py  exception_enum.py  exception_handler.py
common/renderer/: base_serializer.py
common/swagger/: inspectors.py  schema.py
common/utils/: pdf_utils.py  s3_utils.py  web_utils.py
config/settings/: base.py  dev.py  prod.py
llm/prompts/: create_quizzes.prompt.txt
llm/services/: llm_core.py
llm/tests/: test_extract_pdf_texts.py  test_llm_initialize.py
